--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "csvtojson": "^2.0.10",
-    "web3": "^1.8.1"
+    "web3": "^1.8.1",
+    "winston": "^3.8.2"
   }
 }
